src/objects/EMP_organization_consultant__c.object
<CustomObject>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <formula>EMP_Consultant__r.Consultant_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMP_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMP Consultant</label>
        <referenceTo>EMP_Consultant__c</referenceTo>
        <relationshipLabel>EMP Consultant</relationshipLabel>
        <relationshipName>EMP_organization_consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMP_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMP Organization</label>
        <referenceTo>EMP_Organization__c</referenceTo>
        <relationshipLabel>EMP Organization</relationshipLabel>
        <relationshipName>EMP_organization_consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>EMP_Organization__r.Organization_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_RUT__c</fullName>
        <formula>EMP_Organization__r.RUT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization RUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_city__c</fullName>
        <formula>EMP_Organization__r.Organization_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization city</label>
        <type>Text</type>
    </fields>
    <label>EMP organization consultant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EMP_Consultant__c</columns>
        <columns>Consultant_Name__c</columns>
        <columns>EMP_Organization__c</columns>
        <columns>Organization_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>EMP organization consultant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP organization consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>